Renamed to ACS_laser_cmw-mom
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@169407 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/cmw-mom/.project
+++ b/LGPL/CommonSoftware/ACSLaser/cmw-mom/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cmw-mom</name>
+	<name>ACS_laser_cmw-mom</name>
 	<comment></comment>
 	<projects>
 	</projects>
