added MonitorErr library
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@169648 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/monitoring/moncollect/ws/test/Makefile
+++ b/LGPL/CommonSoftware/monitoring/moncollect/ws/test/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # E.S.O. - ACS project
 #
-# "@(#) $Id: Makefile,v 1.4 2011/06/08 19:54:18 tstaig Exp $"
+# "@(#) $Id: Makefile,v 1.5 2012/02/19 14:29:48 bjeram Exp $"
 #
 # Makefile of ........
 #
@@ -77,10 +77,10 @@ MCtestPropertiesComponent_OBJECTS = MCtestPropertiesComponentImpl
 MCtestPropertiesComponent_LIBS= MCtestComponentStubs baci
 
 MCmockBlobber_OBJECTS = MCmockBlobberImpl
-MCmockBlobber_LIBS = baci MonitorArchiverIFStubs CollectorListStatusStubs acscomponent 
+MCmockBlobber_LIBS = baci MonitorArchiverIFStubs CollectorListStatusStubs acscomponent MonitorErr 
 
 MCmockController_OBJECTS = MCmockControllerImpl
-MCmockController_LIBS = baci MonitorArchiverIFStubs CollectorListStatusStubs acscomponent
+MCmockController_LIBS = baci MonitorArchiverIFStubs CollectorListStatusStubs acscomponent MonitorErr
 
 #
 # Scripts (public and local)
