--- a/LGPL/CommonSoftware/monitoring/monblobber/.classpath
+++ b/LGPL/CommonSoftware/monitoring/monblobber/.classpath
@@ -23,7 +23,7 @@
 	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/ACSErrTypeCommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acserr.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/MonitorCollectorErr.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/MonitorErr.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/junit-4.8.2.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/maci.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/lcEngine.jar"/>
