Support for 32/64 bits builds. Both targets are specified in the build.properties file, which results on two separate zipfiles after the compilation process. The difference comes when the user does "make install", which will unzip and install the correct version, based on the host architecture
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@171486 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/eventGUI/src/build.properties
+++ b/LGPL/CommonSoftware/acsGUIs/eventGUI/src/build.properties
@@ -40,11 +40,11 @@ collectingFolder=${archivePrefix}
 # value is a '&' separated list of ',' separate triples.  For example, 
 #     configs=win32,win32,x86 & linux,motif,x86
 # By default the value is *,*,*
-configs =linux, gtk, x86
+configs =linux, gtk, x86 & \
+	linux, gtk, x86_64
 #configs=win32, win32, x86 & \
 #	linux, gtk, ppc &\
 # linux, gtk, x86 & \
-#	linux, gtk, x86_64 & \
 #	linux, motif, x86 & \
 #	solaris, motif, sparc & \
 #	solaris, gtk, sparc & \
@@ -224,13 +224,13 @@ skipFetch=true
 logExtension=.log
 
 # Whether or not to include debug info in the output jars
-javacDebugInfo=false 
+javacDebugInfo=false
 
 # Whether or not to fail the build if there are compiler errors
 javacFailOnError=true
 
 # Enable or disable verbose mode of the compiler
-javacVerbose=true
+javacVerbose=false
 
 # Extra arguments for the compiler. These are specific to the java compiler being used.
 #compilerArg=
