--- a/LGPL/CommonSoftware/eventGUI/src/build.properties
+++ b/LGPL/CommonSoftware/eventGUI/src/build.properties
@@ -40,11 +40,11 @@ collectingFolder=${archivePrefix}
 # value is a '&' separated list of ',' separate triples.  For example, 
 #     configs=win32,win32,x86 & linux,motif,x86
 # By default the value is *,*,*
-configs =linux, gtk, x86
+configs =linux, gtk, x86 & \
+	linux, gtk, x86_64
 #configs=win32, win32, x86 & \
 #	linux, gtk, ppc &\
 # linux, gtk, x86 & \
-#	linux, gtk, x86_64 & \
 #	linux, motif, x86 & \
 #	solaris, motif, sparc & \
 #	solaris, gtk, sparc & \
@@ -224,13 +224,13 @@ skipFetch=true
 logExtension=.log
 
 # Whether or not to include debug info in the output jars
-javacDebugInfo=false 
+javacDebugInfo=false
 
 # Whether or not to fail the build if there are compiler errors
 javacFailOnError=true
 
 # Enable or disable verbose mode of the compiler
-javacVerbose=true
+javacVerbose=false
 
 # Extra arguments for the compiler. These are specific to the java compiler being used.
 #compilerArg=
