--- a/Benchmark/util/src/Makefile
+++ b/Benchmark/util/src/Makefile
@@ -66,7 +66,7 @@ lllll_OBJECTS   =
 #
 # Scripts (public and local)
 # ----------------------------
-SCRIPTS         =
+SCRIPTS         = contquery
 SCRIPTS_L       =
 
 #
