The generation of the XML is not part of the ACS implementation and has ben moved into ACSLaser/laser-source-cpp.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@172036 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsalarm/src/Makefile
+++ b/LGPL/CommonSoftware/acsalarm/src/Makefile
@@ -21,7 +21,7 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $Id: Makefile,v 1.17 2011/11/23 15:11:51 acaproni Exp $"
+# "@(#) $Id: Makefile,v 1.18 2012/04/05 13:16:20 acaproni Exp $"
 #
 # Makefile of ........
 #
@@ -75,7 +75,7 @@ INCLUDES        = 	ACSAlarmSystemInterfaceFactory.h \
 					ACSAlarmSystemInterfaceProxy.h \
 					FaultState.h \
 					faultStateConstants.h \
-			      AlarmSystemInterfaceFactory.h Properties.h Timestamp.h utilConstants.h \
+			      AlarmSystemInterfaceFactory.h Properties.h Timestamp.h \
 					AlarmSystemInterface.h ASIMessage.h ASIConfiguration.h asiConfigurationConstants.h \
 					AlarmSource.h AlarmSourceImpl.h AlarmToQueue.h AlarmsMap.h
 
