acstime library removed from the building of the AlarmSource
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@173073 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsalarm/src/Makefile
+++ b/LGPL/CommonSoftware/acsalarm/src/Makefile
@@ -21,7 +21,7 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $Id: Makefile,v 1.19 2012/04/26 12:42:53 acaproni Exp $"
+# "@(#) $Id: Makefile,v 1.20 2012/04/27 10:07:28 acaproni Exp $"
 #
 # Makefile of ........
 #
@@ -103,7 +103,7 @@ acsAlSysSource_OBJECTS   = ACSAlarmSystemInterfaceFactory ACSAlarmSystemInterfac
 acsAlSysSource_LIBS = maciStubs alSysSource acsutil expat maciErrType loki  cdbErrType acsErrTypeAlarmSourceFactory cdb
 
 alarmSource_OBJECTS = AlarmSourceThread AlarmToQueue AlarmsMap AlarmSourceImpl
-alarmSource_LIBS = alSysSource acsAlSysSource acstime
+alarmSource_LIBS = alSysSource acsAlSysSource 
 
 #
 # Scripts (public and local)
