--- a/Benchmark/components/.classpath
+++ b/Benchmark/components/.classpath
@@ -21,5 +21,8 @@
 	<classpathentry kind="var" path="ACSROOT/lib/jacstime.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/jcontnc.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsnc.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/jACSUtil.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
