Added dependency of mastercompTest.jar on the IDL-generated jar. Sometimes the test had build failures.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@174541 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/mastercomp/test/Makefile
+++ b/LGPL/CommonSoftware/mastercomp/test/Makefile
@@ -49,6 +49,7 @@ COMPONENTS_JARFILES = mastercompTestComp
 mastercompTestComp_DIRS = \
 	alma/ACS/MasterComponentImpl \
 	alma/ACS/SpecialTestMasterComponentImpl
+mastercompTestComp_JLIBS = mastercompTest_if
 
 #
 # java sources in Jarfile on/off
