--- a/Benchmark/componentsLoading/.project
+++ b/Benchmark/componentsLoading/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>managerTest</name>
+	<name>ACS_Benchmark_componentsLoading</name>
 	<comment></comment>
 	<projects>
 	</projects>
