commandcenter now uses the tmcdb-jars
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@175805 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acscommandcenter/.classpath
+++ b/LGPL/CommonSoftware/acscommandcenter/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/jManagerConfig.jar"/>
-	<classpathentry kind="lib" path="lib/jnlp.jar"/>
 	<classpathentry kind="lib" path="lib/jfcunit.jar"/>
 	<classpathentry kind="lib" path="lib/trilead-ssh2-build213.jar"/>
 	<classpathentry kind="lib" path="lib/AcsCommandCenterHelp.jar"/>
@@ -40,5 +39,8 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/avalon-framework.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/logkit.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/cdbrdb-pojos.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/hibernate3.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/cdb_rdb.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
