--- a/LGPL/CommonSoftware/acscommandcenter/.classpath
+++ b/LGPL/CommonSoftware/acscommandcenter/.classpath
@@ -12,6 +12,9 @@
 	<classpathentry kind="var" path="JACORB_HOME/lib/idl.jar"/>
 	<classpathentry kind="var" path="JACORB_HOME/lib/jacorb.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/maciErrType.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/maciSchemaBindings.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/cdbErrType.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acserr.jar" sourcepath="INTROOT/lib/acserr.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acserrj.jar" sourcepath="/INTROOT/lib/acserrj.jar"/>
