Fixed for jar files delivered by ACS 10.1
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@176715 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/AlarmsProfiler/src/project.properties
+++ b/LGPL/CommonSoftware/ACSLaser/AlarmsProfiler/src/project.properties
@@ -18,7 +18,9 @@ acs.jars.plugin=alma.acs.jars
 ## These jars must be found in INTROOT/ACSROOT/JACORB_HOME
 acs.jars.required  = \
   acsalarmSchemaBindings.jar \
+  acscommon.jar \
   acscomponent.jar \
+  acsCallbacksSupport.jar \
   acserr.jar \
   acserrj.jar \
   acsjlog.jar \
@@ -65,5 +67,6 @@ acs.jars.required  = \
   maciErrType.jar \
   NotifyExt.jar \
   NotifyMonitoringExt.jar \
+  repeatGuard.jar \
   selector-1.1.jar \
   xercesImpl.jar
