--- a/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/AlarmsProfiler/src/project.properties
@@ -18,7 +18,9 @@ acs.jars.plugin=alma.acs.jars
 ## These jars must be found in INTROOT/ACSROOT/JACORB_HOME
 acs.jars.required  = \
   acsalarmSchemaBindings.jar \
+  acscommon.jar \
   acscomponent.jar \
+  acsCallbacksSupport.jar \
   acserr.jar \
   acserrj.jar \
   acsjlog.jar \
@@ -65,5 +67,6 @@ acs.jars.required  = \
   maciErrType.jar \
   NotifyExt.jar \
   NotifyMonitoringExt.jar \
+  repeatGuard.jar \
   selector-1.1.jar \
   xercesImpl.jar
