Tests moved in jacsalarmstest
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@177153 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jacsalarm/test/Makefile
+++ b/LGPL/CommonSoftware/jacsalarm/test/Makefile
@@ -81,7 +81,7 @@ lllll_OBJECTS   =
 #
 # Scripts (public and local)
 # ----------------------------
-SCRIPTS         = ThePrologue alarmsMapTest alarmSenderTest alarmSourceTest
+SCRIPTS         = 
 SCRIPTS_L       =
 
 #
@@ -133,8 +133,8 @@ USER_IDL =
 #
 # Jarfiles and their directories
 #
-JARFILES= alarmSourceTest
-alarmSourceTest_DIRS=alma
+JARFILES= 
+jjj_DIRS=
 jjj_EXTRAS= 
 #
 # java sources in Jarfile on/off
