Tests moved here from jacsalarm.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@177157 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jacsalarmtest/test/Makefile
+++ b/LGPL/CommonSoftware/jacsalarmtest/test/Makefile
@@ -52,7 +52,7 @@ acsAlSysTest_DIRS = alma
 # Scripts (public and local)
 # ----------------------------
 SCRIPTS         = 
-SCRIPTS_L       = testFaultState testFactory testProxy jacsalarmTATPrologue
+SCRIPTS_L       = testFaultState testFactory testProxy jacsalarmTATPrologue alarmsMapTest alarmSenderTest alarmSourceTest alarmSourceFactoryTest
 
 #>>>>> END OF standard rules
   
