--- a/LGPL/CommonSoftware/jlogEngine/test/Makefile
+++ b/LGPL/CommonSoftware/jlogEngine/test/Makefile
@@ -19,7 +19,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, 
 # MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.38 2012/01/21 22:48:11 tstaig Exp $" 
+# "@(#) $Id: Makefile,v 1.39 2012/08/07 08:46:39 acaproni Exp $" 
 #
 # Makefile of lcTest for jlog.
 #
@@ -70,7 +70,8 @@ SCRIPTS_L       =	jlogLogEntryTest \
 					jlogTestEngineCacheEntriesQueue \
 					jlogTestEngineAudience \
 					LoadSaveTest \
-					jlogEngineProfiler
+					jlogEngineProfiler \
+					jlogTestCacheFile
 
 #>>>>> END OF standard rules
   
