--- a/LGPL/Tools/extjars/.classpath
+++ b/LGPL/Tools/extjars/.classpath
@@ -11,7 +11,6 @@
 	<classpathentry kind="lib" path="lib/jakarta-oro-2.0.5.jar"/>
 	<classpathentry kind="lib" path="lib/jakarta-regexp-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/javassist-3.4.GA.jar"/>
-	<classpathentry kind="lib" path="lib/jchart2d-3.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/jdom.jar"/>
 	<classpathentry kind="lib" path="lib/jlibeps-0.1.jar"/>
 	<classpathentry kind="lib" path="lib/jnlp.jar"/>
@@ -37,5 +36,11 @@
 	<classpathentry kind="lib" path="lib/junit-4.8.2.jar"/>
 	<classpathentry kind="lib" path="lib/sqltool.jar"/>
 	<classpathentry kind="lib" path="lib/xmlunit-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/ehcache-core-2.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-1.8.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-digester-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-jexl-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
