Prepares test directory structure for AcsFileFinderForDirectoriesTest
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@179412 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jacsutil/test/Makefile
+++ b/LGPL/CommonSoftware/jacsutil/test/Makefile
@@ -19,7 +19,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, 
 # MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.7 2006/04/25 15:39:44 hsommer Exp $"
+# "@(#) $Id: Makefile,v 1.8 2012/09/18 16:39:36 hsommer Exp $"
 #
 # Makefile of jacscommon
 #
@@ -196,9 +196,11 @@ endif
 # TARGETS
 # -------
 all:	do_all
+	tar xzf AcsFileFinderForDirs_Sandbox.tar.gz
 	@echo " . . . 'all' done"
 
 clean : clean_all
+	rm -rf AcsFileFinderForDirs_Sandbox
 	@echo " . . . clean done"
 
 clean_dist : clean_all clean_dist_all
