--- a/LGPL/CommonSoftware/eventGUI/src/project.properties
+++ b/LGPL/CommonSoftware/eventGUI/src/project.properties
@@ -5,7 +5,7 @@
 ## 
 ## European Southern Observatory
 ## A. Caproni 12/02/2009
-## $Id: project.properties,v 1.13 2011/09/07 16:09:10 jschwarz Exp $
+## $Id: project.properties,v 1.14 2012/10/07 07:51:43 hsommer Exp $
 ##
 #################################################
 
@@ -45,7 +45,7 @@ acs.jars.required  = jacorb.jar \
  JavaContainerError.jar \
  jcont.jar \
  jcontnc.jar \
- junit-4.8.2.jar \
+ junit-dep-4.10.jar \
  logging_idl.jar \
  maciErrType.jar \
  maci.jar \
